bug fix in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Intel MPX Explained
 
 # Short description (goes below the title; it will also be used in the RSS feed)
-description: Intel MPX Explained: Evaluation of Intel Memory Protection Extensions.
+description: Intel MPX Explained (Evaluation of Intel Memory Protection Extensions).
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: TU Dresden, Systems Engineering
