--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,11 +1,16 @@
 - menu_name: "Thanks to"
 
-- name: "Dmitrii Kuvaiskii"
-  url: "https://github.com/dimakuv"
-  class: "network-entypo"
-  title: "Dmitrii Kuvaiskii"
+- name: "Franz"
+#  url: "https://github.com/dimakuv"
+#  class: "network-entypo"
+#  title: "Everyone"
 
-- name: "Oleksii Oleksenko"
-  url: "https://github.com/OleksiiOleksenko"
-  class: "services-newsletter"
-  title: "Oleksii Oleksenko"
+- name: "Sergei"
+#  url: "https://github.com/OleksiiOleksenko"
+#  class: "services-newsletter"
+#  title: "Oleksii Oleksenko"
+
+- name: "Rasha"
+#  url: "https://github.com/OleksiiOleksenko"
+#  class: "services-newsletter"
+#  title: "Oleksii Oleksenko"
