--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ author: TUD
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://intel-mpx.github.io'
-baseurl:
+#url: 'https://intel-mpx.github.io'
+url: ''
+baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
