added case-studies and RIPE security

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: TUD
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 #url: 'https://intel-mpx.github.io'
-url: ''
+url: 'http://0.0.0.0:4000'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
@@ -40,8 +40,8 @@ improve_content:
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://intel-mpx.github.io/images/'
-
+#urlimg: 'https://intel-mpx.github.io/images/'
+urlimg: 'http://0.0.0.0:4000/images/'
 
 # Logo size is 600x80 pixels
 logo:
