methodology: measurement tools and testbed

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,10 @@
   url: "/case-studies/"
   side: left
 
+- title: "Bugs in benchmarks"
+  url: "/bugs/"
+  side: left
+
 - title: "Contact"
   url: "/contact/"
   side: right
