--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
   url: "/"
   side: left
 
+- title: "Design"
+  url: "/design/"
+  side: left
+
 - title: "Methodology"
   url: "/methodology/"
   side: left
