more visual homepage

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
   url: "/"
   side: left
 
+- title: "Overview"
+  url: "/overview/"
+  side: left
+
 - title: "MPX Design"
   url: "/design/"
   side: left
