--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ gems:
     - jekyll-asciidoc
     - jekyll-gist
     - jekyll-paginate
+    - jekyll-sitemap
 
 
 #       ____              _             __  _
