--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title: 'Intel MPX Explained'
 slogan:
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'Web-site with comprehensive data for the paper `Intel MPX Explained`'
+description: 'Evaluation of Intel Memory Protection Extensions (Intel MPX) from three perspectives: performance, security, and usability'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Created based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a> (by <a href="http://phlow.de/">Phlow</a>).</p>'
