--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,6 +1,6 @@
 - name: GitHub
 #  url: https://github.com/OleksiiOleksenko/intel_mpx_explained
-  url: https://github.com/hidden
+  url: https://github.com/
   class: icon-github
   title: Code for Intel MPX Explained
 
